#7 no warm up